updated my posts

--- a/source/_posts/2017-02-23-Redesign.md
+++ b/source/_posts/2017-02-23-Redesign.md
@@ -11,7 +11,7 @@ excerpt: 'The ProgBlog team is pleased to announce our redesign of the site.'
 ---
 ## ProgBlog Redesign offers a more comprehensive look, email list
 
-The ProgBlog team is pleased to announce our redesign of the site.  We've been growing a lot in the past few weeks and decided it was time to step up our game – hopefully you agree with us when we say it looks much nicer!
+The ProgBlog team is pleased to announce our redesign of the site.  We've been growing rapidly in the past few months and decided it was time to step up our game – hopefully you agree with us when we say it looks much nicer!
 
 To keep this short, I want to announce our email list! Sign up for updates as we post new content.
 
